2005-05-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_strncpy.c: fixed the fix

2005-05-26 Raphael Neider <rneider AT web.de>

	* src/pic16/glue.c (pic16_printIvalChar): fixed _constant_ string
	  initializers with \0, bug #1208187
	* src/pic/glue.c (printIvalChar): fixed (non- and constant) string
	  intializers with \0, bug #1208187

2005-05-26 Raphael Neider <rneider AT web.de>

	* src/pic16/glue.c (pic16_printIvalChar): fixed string
	  initializers with \0, bug #1208187
	* src/pic16/main.c (_process_pragma): added sanity checks
	  for stack position and size, emit warnings when appropriate

2005-05-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_strncpy.c: fixed not filling with \0

2005-05-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (funcOfType, funcOfTypeVarg, stringToSymbol,
	  createFunction),
	* src/SDCC.y (external_definition, enumerator, parameter_declaration,
	  compound_statement),
	* src/SDCCsymt.h,
	* src/SDCCsymt.c (addSymChain, processFuncArgs): fixed bug #1159134

2005-05-24 Raphael Neider <rneider AT web.de>

	* src/pic16/glue.c (pic16_printGPointerType): fixed #1207796

2005-05-24 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic18f{442,452,458}.h: fixed wrong
	  TRISE definitions, closes bug #1162453

2005-05-22 Raphael Neider <rneider AT web.de>

	* src/pic16/main.c (_process_pragma): check for missing
	  arguments to pragmas code and udata
	* device/include/pic16/pic18f{2550,4331,4455,4520}.h:
	  consistency fixes to match other headers (thanks to Jim Paris)
	* device/lib/pic16/libio/i2c.ignore: 18f4331 provides no I2C

2005-05-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCicode.c (isOperandEqual): fixed missing ;

2005-05-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug1198642.c: new test
	* src/SDCCicode.c (isOperandEqual): fixed bug 1198642
	* src/SDCCcse.c (findPrevIc): added comment, please have a look